--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -1,4 +1,4 @@
-@import url('http://fonts.cdnfonts.com/css/verdana');
+@import url('https://fonts.googleapis.com/css2?family=Jost:wght@400;700&display=swap');
 
 :root {
   --main-bg-color: rgb(255, 255, 255);
@@ -15,7 +15,7 @@ body {
 }
 
 h1 {
-  font-family: 'Verdana', sans-serif;
+  font-family: 'Jost', sans-serif;
   font-size: 2.5rem;
   letter-spacing: 0.2rem;
   font-weight: bold;
