--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -24,7 +24,7 @@ h1 {
 }
 
 h2 {
-  font-family: 'Verdana', sans-serif;
+  font-family: 'Jost', sans-serif;
   font-size: 1.5rem;
   letter-spacing: 0.2rem;
   font-weight: lighter;
@@ -32,7 +32,7 @@ h2 {
 }
 
 p {
-  font-family: 'Verdana', sans-serif;
+  font-family: 'Jost', sans-serif;
   font-size: 1.2rem;
   font-weight: lighter;
   margin-bottom: 1em;
