--- a/css/waves.css
+++ b/css/waves.css
@@ -6,7 +6,7 @@
 }
 
 .header-h1 {
-  font-family: 'Verdana', sans-serif;
+  font-family: 'Jost', sans-serif;
   font-size: 2.5rem;
   letter-spacing: 0.2rem;
   font-weight: bold;
@@ -15,7 +15,7 @@
 }
 
 .header-h2 {
-  font-family: 'Verdana', sans-serif;
+  font-family: 'Jost', sans-serif;
   font-size: 1.5rem;
   letter-spacing: 0.2rem;
   font-weight: lighter;
