--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -166,6 +166,9 @@ p {
   padding-left: 1.5em;
   padding: 1em;
   margin-bottom: 0%;
+  margin-top: 0%;
+  font-size: 1.2em;
+  letter-spacing: 0.2em;
 }
 
 .card-content {
