--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -66,6 +66,13 @@ p {
   height: 28px;
 }
 
+.content-header {
+  font-size: 2.5em;
+  font-weight: bold;
+  margin-top: 2em;
+  margin-bottom: 1em;
+}
+
 .cards {
   display: flex;
   flex-wrap: wrap;
