--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -160,6 +160,11 @@ p {
   color: white;
 }
 
+.card p {
+  margin: 0;
+  padding: 0;
+}
+
 .card-header > .icon {
   align-self: center;
   margin: 1em;
